changed the ghost type

--- a/html:css/content.html
+++ b/html:css/content.html
@@ -25,9 +25,9 @@
             </thead>
             <tbody>
                 <tr>
-                    <td id="first">Vengeful Ghost</td>
-                    <td>Very</td>
-                    <td>undoubtedly</td>
+                    <td id="first">ghost with unfinished business</td>
+                    <td>depends on the situation, they could be nice</td>
+                    <td>only when they want to be</td>
                     <td>Depends on length</td>
                     <td>Not with that attitude</td>
                     <td>Yes</td>
