--- a/how to/footer.html
+++ b/how to/footer.html
@@ -1,9 +1,4 @@
 
 <hr font = "#0000">
-	<button class="btn btn-default">
-    	<a href="github.com"><img src="naoto.png" width="32px" /></a>
-	</button>
-	<button class="btn btn-default">
-    	<a href="gmail.com"><img src="gmail.ico" width="20px" /></a>
-	</button>
+	<h6> All content and writing was created by River Hendriksen 2016. Besides, of course, the actual API </h6>
 
